
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int ULONGLONG ;
typedef int DWORD ;



__attribute__((used)) static DWORD GetFATSizeSectors(DWORD DskSize, DWORD ReservedSecCnt, DWORD SecPerClus, DWORD NumFATs, DWORD BytesPerSect)
{
 ULONGLONG Numerator, Denominator;
 ULONGLONG FatElementSize = 4;
 ULONGLONG ReservedClusCnt = 2;
 ULONGLONG FatSz;

 Numerator = DskSize - ReservedSecCnt + ReservedClusCnt * SecPerClus;
 Denominator = SecPerClus * BytesPerSect / FatElementSize + NumFATs;
 FatSz = Numerator / Denominator + 1;

 return (DWORD)FatSz;
}
